--- a/public/styles/sass/_app.scss
+++ b/public/styles/sass/_app.scss
@@ -6,6 +6,7 @@
   overflow-x: hidden;
   scroll-snap-type: y mandatory;
   scroll-behavior: smooth;
+  width: 100vw;
 }
 
 .container {
