--- a/public/styles/sass/_home.scss
+++ b/public/styles/sass/_home.scss
@@ -24,7 +24,7 @@
     h1 {
       font-family: $mainText;
       font-weight: 600;
-      font-size: max(4vw, 1.25rem);
+      font-size: max(4vw, 1.1rem);
       color: $mainDark;
       opacity: 0;
       transform: translateY(-3rem);
