--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -61,7 +61,7 @@
 .homeSection .whiteSpace h1 {
   font-family: "Titillium Web", sans-serif;
   font-weight: 600;
-  font-size: max(4vw, 1.25rem);
+  font-size: max(4vw, 1.1rem);
   color: #393e41;
   opacity: 0;
   transform: translateY(-3rem);
@@ -147,7 +147,7 @@
 .homeSection .whiteSpace h1 {
   font-family: "Titillium Web", sans-serif;
   font-weight: 600;
-  font-size: max(4vw, 1.25rem);
+  font-size: max(4vw, 1.1rem);
   color: #393e41;
   opacity: 0;
   transform: translateY(-3rem);
@@ -382,7 +382,7 @@ div .leftSideProjectDescription {
 .homeSection .whiteSpace h1 {
   font-family: "Titillium Web", sans-serif;
   font-weight: 600;
-  font-size: max(4vw, 1.25rem);
+  font-size: max(4vw, 1.1rem);
   color: #393e41;
   opacity: 0;
   transform: translateY(-3rem);
@@ -478,18 +478,18 @@ div.technologiesSection .column {
   display: flex;
   flex-direction: column;
   align-items: center;
-  line-height: 2rem;
+  line-height: 3.5vh;
 }
 div.technologiesSection .column p {
   all: unset;
   font-family: "Titillium Web", sans-serif;
   color: #393e41;
-  font-size: max(0.875rem, 1.75vw);
+  font-size: max(1rem, 1.4vw);
 }
 div.technologiesSection .column h3 {
   font-family: "Josefin Sans", sans-serif;
   color: #393e41;
-  font-size: max(1rem, 1.75vw);
+  font-size: max(1rem, 1.35vw);
   border-bottom: solid black 1px;
 }
 div.technologiesSection .column1 {
@@ -546,7 +546,7 @@ div.technologiesSection .column4 {
 .homeSection .whiteSpace h1 {
   font-family: "Titillium Web", sans-serif;
   font-weight: 600;
-  font-size: max(4vw, 1.25rem);
+  font-size: max(4vw, 1.1rem);
   color: #393e41;
   opacity: 0;
   transform: translateY(-3rem);
@@ -837,27 +837,31 @@ img.portrait:hover {
   .topLeft {
     grid-row: 1/2 !important;
     grid-column: auto !important;
+    padding-top: 3%;
   }
 
   .bottomLeft {
     grid-row: 2/3 !important;
     grid-column: auto !important;
     justify-content: center;
-    margin-bottom: 6%;
+    margin-bottom: 10%;
   }
 
   .right {
     max-width: 100vw !important;
+    padding: 0;
   }
 
   .topRight {
     grid-row: 3/4 !important;
     grid-column: auto !important;
+    padding-top: 3%;
   }
 
   .bottomRight {
     grid-row: 4/5 !important;
     grid-column: auto !important;
+    padding-bottom: 20%;
   }
 
   img.portrait {
@@ -866,7 +870,7 @@ img.portrait:hover {
   }
 
   .rightSideDescription {
-    padding: 3rem 1rem 0 !important;
+    padding: 1rem 1rem 0 !important;
   }
 
   .rightSideDescription,
@@ -884,6 +888,7 @@ img.portrait:hover {
   overflow-x: hidden;
   scroll-snap-type: y mandatory;
   scroll-behavior: smooth;
+  width: 100vw;
 }
 
 .container {
